@@ -1,3 +1,5 @@
+2007-04-02  Kalpit Desai <kvdesai@email.unc.edu>
+	* slopper.m: Fixed a bug, now works for both, positive and negative slopes.
 2007-03-05  Kalpit Desai <kvdesai@email.unc.edu>
 	* slopper.m: Added a stand-alone utility to compute/fit slopes of curves.
 	Works for linear scale, log scale, and plots with overlayed curves.
